[gd_scene load_steps=2 format=2]

[ext_resource path="res://main.gd" type="Script" id=1]

[node name="main" type="Node2D"]
script = ExtResource( 1 )

[node name="label_prefix" type="Label" parent="."]
margin_left = 27.0
margin_top = 24.0
margin_right = 108.0
margin_bottom = 48.0
text = "Filter prefix: "
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="input_prefix" type="LineEdit" parent="."]
margin_left = 119.0
margin_top = 24.0
margin_right = 177.0
margin_bottom = 48.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="list_items" type="ItemList" parent="."]
margin_left = 28.0
margin_top = 58.0
margin_right = 177.0
margin_bottom = 139.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label_name" type="Label" parent="."]
margin_left = 210.0
margin_top = 58.0
margin_right = 252.0
margin_bottom = 82.0
text = "Name:"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label_surname" type="Label" parent="."]
margin_left = 210.0
margin_top = 91.0
margin_right = 270.0
margin_bottom = 115.0
text = "Surname:"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="input_name" type="LineEdit" parent="."]
margin_left = 288.0
margin_top = 58.0
margin_right = 363.0
margin_bottom = 82.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="input_surname" type="LineEdit" parent="."]
margin_left = 288.0
margin_top = 91.0
margin_right = 363.0
margin_bottom = 115.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_create" type="Button" parent="."]
margin_left = 28.0
margin_top = 164.816
margin_right = 81.0
margin_bottom = 184.816
text = "Create"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_update" type="Button" parent="."]
margin_left = 108.0
margin_top = 164.816
margin_right = 161.0
margin_bottom = 184.816
text = "Update"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_delete" type="Button" parent="."]
margin_left = 192.977
margin_top = 164.816
margin_right = 247.977
margin_bottom = 184.816
text = "Delete"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="text_changed" from="input_prefix" to="." method="_on_input_prefix_text_changed"]
[connection signal="item_selected" from="list_items" to="." method="_on_list_items_item_selected"]
[connection signal="pressed" from="btn_create" to="." method="_on_btn_create_pressed"]
[connection signal="pressed" from="btn_update" to="." method="_on_btn_update_pressed"]
[connection signal="pressed" from="btn_delete" to="." method="_on_btn_delete_pressed"]
